public/assets/stylesheets/less/i18n.less
div.i18n_group {
    @max-width: 28px;
    position: relative;

    > select.i18n {
        border: 0;
        border-right: 1px solid @light-gray-color-40;
        border-bottom: 1px solid @light-gray-color-40;
        border-radius: 0;
        box-sizing: border-box;
        margin: 0 !important;
        position: absolute;
        top: 1px;
        left: 1px;
        height: 30px;
        overflow: hidden;
        max-width: @max-width;
        z-index: 2;     // stay above ckeditor toolbar

        -webkit-appearance: none;
        -moz-appearance: none;
        appearance: none;

        background-position: left 4px center;
        background-repeat: no-repeat;
        background-size: 20px auto;
        padding: 0px 2px 0px 28px !important;

        > option {
            background-position: left 1px center;
            background-repeat: no-repeat;
            padding-left: 28px;
        }
    }

    > div.i18n {
        input[type=text], > textarea, .editor_toolbar .buttons, .cktoolbar .cke_inner {
            padding-left: (@max-width + 6px) !important;
        }
    }
}

